--- a/magnum/drivers/k8s_coreos_v1/templates/fragments/enable-kubelet-master.yaml
+++ b/magnum/drivers/k8s_coreos_v1/templates/fragments/enable-kubelet-master.yaml
@@ -31,12 +31,12 @@ write_files:
       Environment=KUBELET_VERSION=${KUBE_VERSION}
       Environment=KUBELET_ACI=${HYPERKUBE_IMAGE_REPO}
       ExecStart=/usr/lib/coreos/kubelet-wrapper \
-        --api-servers=http://127.0.0.1:8080 \
+        --kubeconfig=/etc/kubernetes/config/worker-kubeconfig.yaml
         --address=0.0.0.0 \
         --register-node=true \
         --register-schedulable=false \
         --allow-privileged=true \
-        --config=/etc/kubernetes/manifests \
+        --pod-manifest-path=/etc/kubernetes/manifests \
         --hostname-override=${KUBE_NODE_IP} \
         --logtostderr=true \
         --v=0
