--- a/magnum/drivers/k8s_coreos_v1/templates/fragments/enable-kubelet-minion.yaml
+++ b/magnum/drivers/k8s_coreos_v1/templates/fragments/enable-kubelet-minion.yaml
@@ -43,11 +43,11 @@ write_files:
       Environment=KUBELET_VERSION=${KUBE_VERSION}
       Environment=KUBELET_ACI=${HYPERKUBE_IMAGE_REPO}
       ExecStart=/usr/lib/coreos/kubelet-wrapper \
-        --api-servers=${KUBE_MASTER_URI} \
+        --kubeconfig=/etc/kubernetes/config/worker-kubeconfig.yaml
         --address=0.0.0.0 \
         --register-node=true \
         --allow-privileged=true \
-        --config=/etc/kubernetes/manifests \
+        --pod-manifest-path=/etc/kubernetes/manifests \
         --hostname-override=${KUBE_NODE_IP} \
         --logtostderr=true \
         --v=0 \
