--- a/magnum/drivers/k8s_coreos_v1/templates/fragments/write-kubeconfig.yaml
+++ b/magnum/drivers/k8s_coreos_v1/templates/fragments/write-kubeconfig.yaml
@@ -10,6 +10,7 @@ write_files:
       clusters:
       - name: local
         cluster:
+          server: https://$KUBE_MASTER_IP:6443
           certificate-authority: /etc/kubernetes/ssl/ca.pem
       users:
       - name: kubelet
