--- a/magnum/drivers/k8s_coreos_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_coreos_v1/templates/kubemaster.yaml
@@ -265,6 +265,12 @@ resources:
       group: ungrouped
       config: {get_file: fragments/enable-network-service.yaml}
 
+  write_kubeconfig_master:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: fragments/write-kubeconfig-master.yaml}
+
   enable_kubelet:
     type: OS::Heat::SoftwareConfig
     properties:
